Last site update.

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -2,18 +2,15 @@
 
 @main("Follow Rugby", OpenGraph.default) {
   <div class="row">
-    <div class="span8">
-      <div class="textpadding">
-        <div class="topmargin"></div> 
+    <div class="col-sm-8 col-md-8">
         <p>Follow Rugby was launched in April 2013 by twin brothers, Als and Matt. We grew up in Belgium, where we first learned to play our great sport, and are therefore particularly passionate about how the game develops and spreads to all corners of the world.</p>
         <p>We want to build a site that is useful and loved by global rugby fans. We encourage you to get in touch if you have any comments, suggestions or commercial ideas, using Twitter <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> or email <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.
         <br></br>
-        <div class="span7 pagination-centered"><img src="@routes.Assets.at("images/logo1.png")"></img></div>
-      </div>
+        <p class="text-center"> <img src="@routes.Assets.at("images/logo1.png")"></img></p>
+      
     </div>
 
-    <div class="span4"> 
-      <div class="topmargin"></div> 
+    <div class="col-sm-4"> 
       <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
