--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -154,7 +154,7 @@
       </table>
       }
     </div>
-    <div class="col-md-4 hidden-sm hidden-xs">
+    <div class="col-sm-4 hidden-sm hidden-xs">
   
       @media.listWidget.map { list =>
         <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
