--- a/app/views/joinIn.scala.html
+++ b/app/views/joinIn.scala.html
@@ -2,8 +2,7 @@
 
 @main("Follow Rugby", OpenGraph.default){
 <div class="row">
-  <div class="span8">
-    <div class="textpadding">
+  <div class="col-sm-8 col-md-8">
     <h4 class="text-center">Follow Rugby</h4>
     <p>Follow Rugby shows the best #rugby Twitter content with profiles grouped into relevant categories AND great rugby videos, including channels from club and international sides. The Tweets and videos are automatically updated when new posts appear. You can interact through Twitter on our site.</p>
     <h4 class="text-center">Follow Match Tweet Updates</h4>
@@ -14,12 +13,10 @@
     <p><em>Please continue to tell your rugby friends about the site and contact us with any comments, ideas or suggestions – this is a site for the global #rugby community and we want to build it for you.</em></p>
 
     <br>
-    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
+    <p class="text-center"><img src="@routes.Assets.at("images/logo1.png")"></img></p>
      </div>
-    </div>
 
-    <div class="span4"> 
-      <div class="topmargin"></div> 
+    <div class="col-sm-4"> 
       <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
