--- a/app/views/highlights.scala.html
+++ b/app/views/highlights.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: Page[Video], currentFilter: String, latestVideos: Seq[(Video, VideoPlayer)], videoCategory: VideoCategory, competitions: Seq[(String, String)], competitionForm: Form[Int], competitionId: Int)
+@(currentPage: Page[Video], currentFilter: String, videoCategory: VideoCategory, competitions: Seq[(String, String)], competitionForm: Form[Int], competitionId: Int)
 
 @import helper._
 @import java.text.SimpleDateFormat
@@ -26,37 +26,27 @@
 }
 
 @main("Follow Rugby", OpenGraph.default){
-  <div class="row">
-    <div class="span3">
-      @videoReel(latestVideos.map{case (v, vp) => (v, videoCategory, vp, VideoHtml(v, vp)) }, Some("More "+videoCategory.name)) 
-    </div>
-    <div class="span8">
       <div class="row">
-        <div class="textpadding">
-          <div class="topmargin"></div>
-          <div class="span8 pagination-centered">
           @form(action = routes.Application.selectVideoCategory(2, Linker.strip("Highlights")), '_onchange -> "this.form.submit()") {
-            <table>
-              <tr>
-                <td>
+            <div class="col-sm-12">
+            <p class="text-center">
                   <select id="compId" name="compId" >
                     <option class="blank" value="">-- Choose a competition --</option>
                     @competitions.map { case(cId, cName) =>
                     <option value="@cId" @{if(competitionId == cId.toInt) "selected"}>@cName</option>
                     }
                   </select>
-                </td>
-                <td>
-                  <p><input type="submit" value="Go"  class="btn primary"></input></p>
-                </td>
-              </tr>
-            </table>
+                  </p>
+            </div>
+            <div class="col-sm-12">
+                  <p class="text-center"><input type="submit" value="Go"  class="btn btn-primary input-sm"></input></p>
+            </div>
           }
-          </div>
-        </div>
       </div>
+      <div class="row">
+      <div class="col-sm-12">
       <h2>@videoCategory.name</h2>
-      <p><small>Tweet <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> or email <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> any rugby videos you want on the site, especially any great amateur footage!</small></p>
+      <p>Tweet <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> or email <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> any rugby videos you want on the site, especially any great amateur footage!</p>
       @Option(currentPage.items).filterNot(_.isEmpty).map { videos =>
       <table class="table table-striped table-bordered table-condensed">
         <thead>
@@ -76,36 +66,30 @@
         }
         </tbody>
       </table>
-      <div id="pagination" class="pagination">
-        <ul>
-        @currentPage.prev.map { page =>
-          <li class="prev">
-              <a href="@link(page)">&larr; Previous</a>
-          </li> 
-        }.getOrElse {
-          <li class="prev disabled">
-              <a>&larr; Previous</a>
-          </li>
-        }
-          <li class="current">
-              <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + videos.size) of @currentPage.total</a>
-          </li>
-        @currentPage.next.map { page =>
-          <li class="next">
-              <a href="@link(page)">Next &rarr;</a>
-          </li> 
-        }.getOrElse {
-          <li class="next disabled">
-              <a>Next &rarr;</a>
-          </li>
-        }
-        </ul>
       </div>
+  </div>
+      <div class="row">
+  <div class="col-sm-12">
+        @currentPage.prev.map { page =>
+         
+              <h3 class="text-center"><a href="@link(page)">PREVIOUS</a></h3>
+         
+        }.getOrElse {
+         
+        }
+        @currentPage.next.map { page =>
+          
+              <h3 class="text-center"><a href="@link(page)">NEXT</a></h3>
+          
+        }.getOrElse {
+          
+        }
+    </div>
+  </div>
     }.getOrElse {
       <div class="well">
           <em>Nothing to display</em>
       </div>
     }
-    </div>
-  </div>
+    
 }
