--- a/app/views/matchCentre.scala.html
+++ b/app/views/matchCentre.scala.html
@@ -31,13 +31,14 @@
   }
   <br></br>
   @if(!matchGame.isDefined) {
-  <div class="span12 pagination-centered">  
-    <p class="lead">Please select a match from the list above to see build up and LIVE in-game Twitter updates.</p>
+  <div class="col-sm-12">
+    <p class="text-center lead">  
+     Please select a match from the list above to see build up and LIVE in-game Twitter updates.</p>
   </div>
   }
   @matchGame.map { g =>
   <div class="row">
-    <div class="span12">
+    <div class="col-sm-12">
       <a name="game@g.game.team1Id"></a>
         <div class="well">
           <h6 class="text-left">@strDate(g.game.gameDate) @@@g.game.time</h6>
@@ -47,24 +48,26 @@
     </div>
   </div>
   <div class="row"> 
-    <div class="span4">
+    <div class="col-sm-4 col-md-4">
       <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/@{g.team1Widget.twitterAccount}/@{g.team1Widget.url}" data-widget-id="@g.team1Widget.id"></a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
+      <br>
     </div>
-    <div class="span4">
+    <div class="col-sm-4 col-md-4">
       <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/@{g.team2Widget.twitterAccount}/@{g.team2Widget.url}" data-widget-id="@g.team2Widget.id"></a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
+      <br>
     </div>
     @g.matchWidget.map { w =>    
-    <div class="span4">
+    <div class="col-sm-4 col-md-4">
       <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?@{w.url}" data-widget-id="@w.id"></a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
+      <br>
     </div>
     }
   </div>
-  <br></br>
   } 
 }
