--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -14,7 +14,7 @@
   <div class="textpadding">
     <div class="topmargin"></div> 
     <div class="row">
-      <div class="span5"><h3>Search for people or teams...</h3></div>
+      <div class="span5"><h4>Search for people or teams...</h4></div>
     </div>
     <div class="row">
       <div id="actions">
@@ -29,37 +29,19 @@
       </div>
     </div>
   <div class="row">
-    <div class="span11">
+  <div class="col-sm-12">
       @Option(searchResults.members).filterNot(_.isEmpty).map { members =>
       <h4>People who matched your search...</h4>
       @members.sortBy(_.name).drop(startResultMember).take(20).map { member => 
       <p><a href="https://www.twitter.com/intent/user?screen_name=@{member.twitterName}">@member.name</a></p>
       }
-      <div id="pagination" class="pagination">
-        <ul>
         @if(startResultMember-20 >= 0) {
-          <li class="previous">
-            <a href="@routes.Application.search(currentFilter, startResultMember-20, startResultTeam)">&larr; Previous</a>
-          </li>
-        } else {
-          <li class="previous disabled">
-            <a>&larr; Previous</a>
-          </li>
-        }
-          <li class="current">
-            <a>Displaying @(startResultMember + 1) to @memberSize() of @members.size</a>
-          </li>
+          <h4 class="text-center"><a href="@routes.Application.search(currentFilter, startResultMember-20, startResultTeam)">PREVIOUS</a></h4>
+        } 
         @if(startResultMember+20 < members.size) {
-          <li class="next">
-            <a href="@routes.Application.search(currentFilter, startResultMember+20, startResultTeam)">Next &rarr;</a>
-          </li>
-        } else {
-          <li class="next disabled">
-            <a>Next &rarr;</a>
-          </li>
-        }
-        </ul>
-      </div> 
+          <h4 class="text-center"><a href="@routes.Application.search(currentFilter, startResultMember+20, startResultTeam)">NEXT</a></h4>
+        } 
+       <p class="text-center"><a>Displaying @(startResultMember + 1) to @memberSize() of @members.size</a></p>
       }.getOrElse {
         @if(!currentFilter.isEmpty) {
         <h4>No people matched your search.</h4>
@@ -68,42 +50,31 @@
     </div>
   </div>
   <div class="row">
-    <div class="span11">
+  <div class="col-sm-12">
     @Option(searchResults.teams).filterNot(_.isEmpty).map { teams =>
     <h4>Teams who matched your search...</h4>
     @teams.sortBy(_.name).drop(startResultTeam).take(20).map { team => 
     <p><a href="https://www.twitter.com/intent/user?screen_name=@{team.twitterName}">@team.name</a></p>
     }
-    <div id="pagination" class="pagination">
-      <ul>
+    
+  <div class="row">
+  <div class="col-sm-12">
       @if(startResultTeam-20 >= 0) {
-        <li class="previous">
-          <a href="@routes.Application.search(currentFilter, startResultMember, startResultTeam-20)">&larr; Previous</a>
-        </li>
-      } else {
-        <li class="previous disabled">
-          <a>&larr; Previous</a>
-        </li>
-      }
-        <li class="current">
-          <a>Displaying @(startResultTeam + 1) to @teamSize() of @teams.size</a>
-        </li>
+          <h4 class="text-center"><a href="@routes.Application.search(currentFilter, startResultMember, startResultTeam-20)">PREVIOUS</a></h4>
+      } 
+          
       @if(startResultTeam+20 < teams.size) {
-        <li class="next">
-          <a href="@routes.Application.search(currentFilter, startResultMember, startResultTeam+20)">Next &rarr;</a>
-        </li>
-      } else {
-        <li class="next disabled">
-          <a>Next &rarr;</a>
-        </li>
+        <h4 class="text-center"><a href="@routes.Application.search(currentFilter, startResultMember, startResultTeam+20)">NEXT</a></h4>
       }
-      </ul>
-    </div> 
+      
+      <p class="text-center"><a>Displaying @(startResultTeam + 1) to @teamSize() of @teams.size</a></p>
     }.getOrElse {
     @if(!currentFilter.isEmpty) {
     <h4>No teams matched your search.</h4>
     }
   }
+  </div>
+  </div>
   </div>
 </div> 
 }
