--- a/app/views/videoCategories.scala.html
+++ b/app/views/videoCategories.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: Page[Video], currentFilter: String, latestVideos: Seq[(Video, VideoPlayer)], videoCategory: VideoCategory)
+@(currentPage: Page[(Video, VideoPlayer, VideoHtml)], currentFilter: String, videoCategory: VideoCategory)
 
 @import helper._
 @import java.text.SimpleDateFormat
@@ -27,61 +27,53 @@
 
 @main("Follow Rugby", OpenGraph.default){
   <div class="row">
-    <div class="span3">
-      @videoReel(latestVideos.map{case (v, vp) => (v, videoCategory, vp, VideoHtml(v, vp)) }, Some("More "+videoCategory.name)) 
-    </div>
-    <div class="span8">
+    <div class="col-sm-12">
       <h2>@videoCategory.name</h2>
-      <p><small>Tweet <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> or email <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> any rugby videos you want on the site, especially any great amateur footage!</small></p>
-      @Option(currentPage.items).filterNot(_.isEmpty).map { videos =>
-      <table class="table table-striped table-bordered table-condensed">
-        <thead>
-            <tr>
-              <th>Date added</th>
-              <th>Title</th>
-              <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-        @videos.map { video => 
-          <tr>
-            <td  width="130">@formatDate(video.date)</td>
-            <td><a href="@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))">@video.title</a></td>
-            <td>@video.description</td>
-          </tr>
-        }
-        </tbody>
-      </table>
-      <div id="pagination" class="pagination">
-        <ul>
-        @currentPage.prev.map { page =>
-          <li class="prev">
-              <a href="@link(page)">&larr; Previous</a>
-          </li> 
-        }.getOrElse {
-          <li class="prev disabled">
-              <a>&larr; Previous</a>
-          </li>
-        }
-          <li class="current">
-              <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + videos.size) of @currentPage.total</a>
-          </li>
-        @currentPage.next.map { page =>
-          <li class="next">
-              <a href="@link(page)">Next &rarr;</a>
-          </li> 
-        }.getOrElse {
-          <li class="next disabled">
-              <a>Next &rarr;</a>
-          </li>
-        }
-        </ul>
-      </div>
-      }.getOrElse {
-      <div class="well">
-          <em>Nothing to display</em>
-      </div>
-      }
+      <p>Tweet <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> or email <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> any rugby videos you want on the site, especially any great amateur footage!</p>
     </div>
   </div>
+      @Option(currentPage.items).filterNot(_.isEmpty).map { videos =>
+        
+      
+      
+        @videos.sliding(3,3).map { vids => 
+          
+         <div class="row">
+          @vids.map { case (video, videoPlayer, videoHtml) => 
+          <div class="col-sm-4">
+            <a href="@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))"><img height="240" src="@videoHtml.largeThumbnail"></img></a>
+            <a href="@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))"><h4>@video.title</h4></a>
+          </div>
+          
+        }
+      </div>
+        }
+  <div class="row">
+  <div class="col-sm-12">
+        @currentPage.prev.map { page =>
+         
+              <h3 class="text-center"><a href="@link(page)">PREVIOUS</a></h3>
+         
+        }.getOrElse {
+         
+        }
+        @currentPage.next.map { page =>
+          
+              <h3 class="text-center"><a href="@link(page)">NEXT</a></h3>
+          
+        }.getOrElse {
+          
+        }
+    </div>
+  </div>
+  }.getOrElse {
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="well">
+        <em>Nothing to display</em>
+      </div>
+    </div>
+  </div>
+      }
+   
 }
