--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -1,26 +1,47 @@
-@(video: Video, videoCategory: VideoCategory, videoPlayer: VideoPlayer, randomVideos: Seq[(Video, VideoCategory, VideoPlayer, VideoHtml)], videoHtml: VideoHtml, openGraph: OpenGraph)
+@(video: Video, videoCategory: VideoCategory, videoPlayer: VideoPlayer, previousVideos: Seq[(Video, VideoPlayer, VideoHtml)], videoHtml: VideoHtml, openGraph: OpenGraph)
 
 @import helper._
 
 @main("Follow Rugby", openGraph){
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="row">
  
-  <div class="col-md-8">
-    <h4>@videoCategory.name</h4>  
+  <div class="col-sm-8 col-md-8">
+    <h4><a href="@routes.Application.selectVideoCategory(videoCategory.id.get, Linker.strip(videoCategory.name))">@videoCategory.name</a></h4>  
     <h1>@video.title</h1>
-    <p class="lead">@video.description</p>
-    <div class="span8 pagination-centered">
+    @video.description.split("\\n").map { line =>
+      <p class="lead">@line</p>
+    }
+    <div class="text-center">
+    <div class="center-block fb-like-box">
+      <p>Please follow us on Facebook and Twitter</p> <div class="fb-follow" data-href="https://www.facebook.com/FollowRugby" data-colorscheme="light" data-layout="button" data-show-faces="false"></div>
+      <a href="https://twitter.com/FollowRugbySite" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false">Follow @@FollowRugbySite</a>
+    </div>
+  </div>
+    <div class="linebreak"></div>
       <div class="video-wrapper">
       @videoHtml.fullVideo
       </div>
       <div class="linebreak"></div> 
       @video.thanks.map { thank => <p><em>(Credit @thank)</em></p> }
+      <div class="linebreak"></div> 
+      <div class="fb-like" data-href="http://www.follow-rugby.com@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><a href="https://twitter.com/share" class="twitter-share-button" data-via="FollowRugbySite">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    <br></br>
     </div>
-  </div>
-  <div class="col-md-4">
-      @randomVideos.map { case (vid, videoCategory, _, randVideoHtml) =>
+  
+  <div class="col-sm-4">
+      @previousVideos.map { case (vid, _, previousVideoHtml) =>
       <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><h4>@vid.title</h4></a>
-      <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img src="@randVideoHtml.largeThumbnail"></img></a>
+      <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img src="@previousVideoHtml.largeThumbnail"></img></a>
     }
   </div>
 </div>
