Ad network added.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -69,7 +69,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Club Rugby<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="@routes.Application.selectCategory(4, "avivapremiership")">Aviva Premiership</a></li>
-                <li><a href="@routes.Application.selectCategory(5, "rabodirectpro12")">RaboDirect PRO 12</a></li>
+                <li><a href="@routes.Application.selectCategory(5, "pro12")">PRO 12</a></li>
                 <li><a href="@routes.Application.selectCategory(2, "super15")">Super 15</a></li>
                 <li><a href="@routes.Application.selectCategory(3, "top14")">Top 14</a></li>
                 <li><a href="@routes.Application.selectCategory(6, "japantopleague")">Japan Top League</a></li>
