--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -20,6 +20,11 @@
     @video.description.split("\\n").map { line =>
       <p class="lead">@line</p>
     }
+    <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
+    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
+    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+    </iframe></noscript>
     
     <div class="linebreak"></div>
       <div class="video-wrapper">
@@ -29,7 +34,7 @@
       @video.thanks.map { thank => <p><em>(Credit @thank)</em></p> }
       <div class="linebreak"></div> 
       <div class="fb-like" data-href="http://www.follow-rugby.com@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><a href="https://twitter.com/share" class="twitter-share-button" data-text="@video.title"  data-via="FollowRugbySite">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script><script type="text/javascript" src="//www.reddit.com/buttonlite.js?i=2"></script><div class="g-plus" data-action="share" data-annotation="bubble"></div>
     <br></br>
     </div>
   
@@ -40,7 +45,9 @@
     }
   </div>
 </div>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
 <div id="share-row-sticky" class="visible-xs">
   <p><a class="facebook button" href="https://m.facebook.com/sharer.php?u=http://www.follow-rugby.com@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title)) target="_blank">Share on facebook</a></p>
-</div
+</div>
 }
