--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,21 +22,34 @@
 
   
   <div class="row">
-    <div class="col-sm-12">
-      <h1 class="text-center">THE SITE for the latest Global Rugby Tweets and Videos!</h1>
+  <div class="col-sm-4 hidden-sm hidden-xs">
+      <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
+    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
+    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+    </iframe></noscript>
+  </div>
+    <div class="col-sm-4">
+      <br></br>
+      <h1 class="text-center">Follow Rugby</h1>
+      <h3 class="text-center">THE SITE for the latest Global Rugby Tweets and Videos!</h1>
       <div class="linebreak"></div>
       
     </div>
+  <div class="col-sm-4">
+      <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
+    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
+    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+    </iframe></noscript>
   </div>
-  
-  <div class="row">
-  
   </div>
+  <br></br>
    @videos.sliding(3,3).map { vids => 
   <div class="row">
     @vids.map { case (vid, videoCategory, videoPlayer, videoHtml) =>
       <div class="col-sm-4">
-      <td align="center"><a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img height="240" src="@videoHtml.largeThumbnail"></img></a>
+      <td align="center"><a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img height="240" width="300" src="@videoHtml.largeThumbnail"></img></a>
       <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><h4>@vid.title</h4></a>
       </div>
     }
@@ -78,7 +91,6 @@
         /<a href="@routes.Application.selectTeam(category.id.get, team.id.get, link(category.name), link(team.name))">@member.name</a>/
       }/
       </p>
-      <div class="linebreak"></div>
     </div>
   </div>
 
