--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -13,18 +13,24 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <div class="row">
+  <div class="col-sm-2 hidden-xs">
+  <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=17ac&_i=12617&_r=INSERT_RANDOM_NUMBER'>
+</script><noscript><iframe id='61a9d0' name='61a9d0' src='http://delivery.switchadhub.com/adserver/tag.php?_t=27a9&_i=12617&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='160' height='600'>
+<a href='http://delivery.switchadhub.com/adserver/tag.php?_t=37aa&_n=61a9d0&_i=12617&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+<img src='http://delivery.switchadhub.com/adserver/tag.php?_t=47a7&_n=61a9d0&_i=12617&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+</iframe></noscript>
+  </div>
+  
  
-  <div class="col-sm-8 col-md-8">
+  <div class="col-sm-6">
+  
+   
     <h4><a href="@routes.Application.selectVideoCategory(videoCategory.id.get, Linker.strip(videoCategory.name))">@videoCategory.name</a></h4>  
     <h1>@video.title</h1>
     @video.description.split("\\n").map { line =>
       <p class="lead">@line</p>
     }
-    <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
-    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
-    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
-    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
-    </iframe></noscript>
+    
     
     <div class="linebreak"></div>
       <div class="video-wrapper">
@@ -35,15 +41,23 @@
       <div class="linebreak"></div> 
       <div class="fb-like" data-href="http://www.follow-rugby.com@routes.Application.selectVideo(video.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(video.title))" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><a href="https://twitter.com/share" class="twitter-share-button" data-text="@video.title"  data-via="FollowRugbySite">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script><script type="text/javascript" src="//www.reddit.com/buttonlite.js?i=2"></script><div class="g-plus" data-action="share" data-annotation="bubble"></div>
-    <br></br>
-    </div>
+ 
+  </div>
   
   <div class="col-sm-4">
+       <a href="http://store.yahoo.com/cgi-bin/clink?yhst-3213199514187+wtFwmu+fan-shop-shop-by-team.html+"><img src="@routes.Assets.at("images/wrs.jpg")"></img></a>
       @previousVideos.map { case (vid, _, previousVideoHtml) =>
       <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><h4>@vid.title</h4></a>
       <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img src="@previousVideoHtml.largeThumbnail"></img></a>
     }
   </div>
+</div>
+
+<div class="row">
+ <div class="col-sm-4">
+   <br></br>
+   
+ </div>
 </div>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
