--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -10,101 +10,7 @@
 @main("Follow Rugby", OpenGraph.default) {
   <script>
     @media.videoPlayerChannel.map { v =>
-   (function() {
-    function createPlayer(jqe, video, options) {
-        var ifr = $('iframe', jqe);
-        if (ifr.length === 0) {
-            ifr = $('<iframe scrolling="no">');
-            ifr.addClass('player');
-        }
-        var src = 'http://www.youtube.com/embed/' + video.id;
-        if (options.playopts) {
-            src += '?';
-            for (var k in options.playopts) {
-                src+= k + '=' + options.playopts[k] + '&';
-            }  
-            src += '_a=b';
-        }
-        ifr.attr('src', src);
-        jqe.append(ifr);  
-    }
-    
-    function createCarousel(jqe, videos, options) {
-        var car = $('div.carousel', jqe);
-        if (car.length === 0) {
-            car = $('<div>');
-            car.addClass('carousel');
-            jqe.append(car);
-            
-        }
-        $.each(videos, function(i,video) {
-            options.thumbnail(car, video, options); 
-        });
-    }
-    
-    function createThumbnail(jqe, video, options) {
-        var imgurl = video.thumbnails[0].url;
-        var img = $('img[src="' + imgurl + '"]');
-        if (img.length !== 0) return;
-        img = $('<img>');    
-        img.addClass('thumbnail');
-        jqe.append(img);
-        img.attr('src', imgurl);
-        img.attr('title', video.title);
-        img.click(function() {
-            options.player(options.maindiv, video, $.extend(true,{},options,{playopts:{autoplay:1}}));
-        });
-    }
-    
-    var defoptions = {
-        autoplay: false,
-        user: null,
-        carousel: createCarousel,
-        player: createPlayer,
-        thumbnail: createThumbnail,
-        loaded: function() {},
-        playopts: {
-            autoplay: 0,
-            egm: 1,
-            autohide: 1,
-            fs: 1,
-            showinfo: 0
-        }
-    };
-    
-    
-    $.fn.extend({
-        youTubeChannel: function(options) {
-            var md = $(this);
-            md.addClass('youtube');
-            md.addClass('youtube-channel');
-            var allopts = $.extend(true, {}, defoptions, options);
-            allopts.maindiv = md;
-            $.getJSON('http://gdata.youtube.com/feeds/users/' + allopts.user + '/uploads?alt=json-in-script&format=5&callback=?', null, function(data) {
-                var feed = data.feed;
-                var videos = [];
-                $.each(feed.entry, function(i, entry) {
-                    var video = {
-                        title: entry.title.$t,
-                        id: entry.id.$t.match('[^/]*$'),
-                        thumbnails: entry.media$group.media$thumbnail
-                    };
-                    videos.push(video);
-                });
-                allopts.allvideos = videos;
-                allopts.carousel(md, videos, allopts);
-                allopts.player(md, videos[0], allopts);
-                allopts.loaded(videos, allopts);
-            });
-          } 
-        });
-        
-      })();
-    
-            
-      $(function() {
-          $('#channelplayer').youTubeChannel({user:'@v.channel'});
-      });
+  
     }
   </script>
 	<div class="row">
@@ -171,7 +77,7 @@
       @media.videoPlayerChannel.map { v => 
         @if(v.player.name.toLowerCase == "youtube") {   
         <h5>Latest Team Videos</h5>
-        <div id="channelplayer"></div>
+        <iframe src="http://www.youtube.com/embed/?listType=user_uploads&list=@{v.channel}" width="100%" height="300px" frameBorder="0"></iframe>
         } else {
           <div style="text-align: right;"><iframe id="dm_jukebox_iframe" style="overflow:hidden; margin:0; padding:0; width: 100%; height: 300px;" width="100%" align="center" frameborder="0" marginwidth="0" marginheight="0" src="http://www.dailymotion.com/widget/jukebox?list[]=%2Fuser%2F@{v.channel}%2F1&skin=default&autoplay=0&automute=0"></iframe><a style="font-size: 10px; color: #193D5E; text-decoration: none;" href="http://www.dailymotion.com" target="_blank" title="Powered by Dailymotion"></a></div>
         }
