Put back media strike.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -23,7 +23,11 @@
   
   <div class="row">
   <div class="col-sm-4 hidden-sm hidden-xs">
-       <a href="http://store.yahoo.com/cgi-bin/clink?yhst-3213199514187+wtFwmu+fan-shop-shop-by-team.html+"><img src="@routes.Assets.at("images/wrs.jpg")"></img></a>
+      <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
+    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
+    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+    </iframe></noscript>
   </div>
     <div class="col-sm-4">
       <br></br>
@@ -32,8 +36,12 @@
       <div class="linebreak"></div>
       
     </div>
-  <div class="col-sm-4">
-       <a href="http://store.yahoo.com/cgi-bin/clink?yhst-3213199514187+wtFwmu+fan-shop-shop-by-team.html+"><img src="@routes.Assets.at("images/wrs.jpg")"></img></a>
+   <div class="col-sm-4">
+      <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
+    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
+    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+    </iframe></noscript>
   </div>
   </div>
   <br></br>
