--- a/app/views/videos.scala.html
+++ b/app/views/videos.scala.html
@@ -45,7 +45,11 @@
   </div>
   
   <div class="col-sm-4">
-       <a href="http://store.yahoo.com/cgi-bin/clink?yhst-3213199514187+wtFwmu+fan-shop-shop-by-team.html+"><img src="@routes.Assets.at("images/wrs.jpg")"></img></a>
+       <script type='text/javascript' src='http://delivery.switchadhub.com/adserver/tag.php?_t=1790&_i=12616&_r=INSERT_RANDOM_NUMBER'>
+    </script><noscript><iframe id='e3ce21' name='e3ce21' src='http://delivery.switchadhub.com/adserver/tag.php?_t=279c&_i=12616&_r=INSERT_RANDOM_NUMBER' frameborder='0' scrolling='no' width='300' height='250'>
+    <a href='http://delivery.switchadhub.com/adserver/tag.php?_t=379d&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' target='_blank'>
+    <img src='http://delivery.switchadhub.com/adserver/tag.php?_t=479a&_n=e3ce21&_i=12616&_r=INSERT_RANDOM_NUMBER' border='0' alt='' /></a>
+    </iframe></noscript>
       @previousVideos.map { case (vid, _, previousVideoHtml) =>
       <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><h4>@vid.title</h4></a>
       <a href="@routes.Application.selectVideo(vid.id.get, videoCategory.id.get, Linker.strip(videoCategory.name), Linker.linkVideo(vid.title))"><img src="@previousVideoHtml.largeThumbnail"></img></a>
