Added scrum advert.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -95,6 +95,14 @@
             
     
     <div class="container"> 
+      <div class="row">
+        <div class="col-sm-12 hidden-sm hidden-xs">
+          <a href="http://www.scrummagazine.com"><img class="center-block" src=@routes.Assets.at("images/scrum.jpg")></img></a>
+        </div>
+        <div class="col-sm-4 hidden-md hidden-lg">
+          <a href="http://www.scrummagazine.com"><img class="center-block" src=@routes.Assets.at("images/scrum_xs.jpg")></img></a>
+        </div>
+      </div>
     @content
     </div>
     <script type="text/javascript">
